<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="calculate">CALCULATE</string>
    <string name="age_years">Age (Years)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="full_name">Full Name</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="check_your_health_status">Check your health status</string>
    <string name="your_results">Your Results</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="bmi">BMI:</string>
    <string name="category">Category:</string>
    <string name="bmi_result">BMI Result</string>
</resources>